<resources>
    <string name="app_name">Personnage</string>
    <string name="save">Sauvegarder</string>
    <string name="new_text">Nouveau</string>
    <string name="reset">Réinitialiser</string>
    <string name="enable">Activer la modification des statistiques</string>
    <string name="name">Nom:</string>
    <string name="character_name">Nom du personnage</string>
    <string name="class_text">Classe:</string>
    <string name="mage">Mage</string>
    <string name="warrior">Guerrier</string>
    <string name="good_character">Le personnage est bon</string>
    <string name="bad_character">Le personnage est mauvais</string>
    <string name="hp">PV:</string>
    <string name="character_hp">PV du personnage</string>
    <string name="ca">CA:</string>
    <string name="character_ca">CA du personnage</string>
    <string name="damage">DMG:</string>
    <string name="character_damage">DMG du personnage</string>
    <string name="magic_points">Points de magie</string>
    <string name="character_magic_points">Points de magie du personnage</string>
    <string name="name_error">Le nom du personnage est obligatoire</string>
    <string name="hp_error">Les PV du personnage sont obligatoires</string>
    <string name="ca_error">Le CA du personnage est obligatoire</string>
    <string name="damage_error">Les DMG du personnage sont obligatoires</string>
    <string name="magic_points_error">Les points de magie du personnage sont obligatoires</string>
</resources>