<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/textTitle"/>
    <EditText
        android:id="@+id/character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/character_name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_text"
        style="@style/textTitle"/>
    <TextView
        android:id="@+id/character_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warrior"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="fill_horizontal">
        <TextView
            android:id="@+id/character_good_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_character"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/character_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hp"
        style="@style/textTitle"/>
    <EditText
        android:id="@+id/character_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/character_hp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ca"
        style="@style/textTitle"/>
    <EditText
        android:id="@+id/character_ca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/character_ca"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/damage"
        style="@style/textTitle"/>
    <EditText
        android:id="@+id/character_dmg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/character_damage"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <LinearLayout
        android:id="@+id/magic_points_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_points"
            style="@style/textTitle"/>
        <EditText
            android:id="@+id/character_magic_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/character_magic_points"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>