<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:text="@string/save"
            android:onClick="saveCharacter"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:text="@string/new_text"
            android:onClick="newCharacter"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:text="@string/reset"
            android:onClick="resetForm"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/enable_modifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:checked="true"/>
</androidx.appcompat.widget.LinearLayoutCompat>